--- a/project 1: Z boson mass measurement/Zmumu_measure.ipynb
+++ b/project 1: Z boson mass measurement/Zmumu_measure.ipynb
@@ -239,8 +239,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1. clean up dataset a bit\n",
-    "- demand that charge of muons should be opposite\n",
+    "## cleaning up the dataset a bit\n",
+    "- charge of muons should be opposite\n",
     "- $I_{track}$ < 3 and $d_{xy}$ < 0.2 cm"
    ]
   },
@@ -335,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Here you can fit model parameters by hand"
+    "## fitting model parameters by hand"
    ]
   },
   {
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ... but you can do it automatically of course"
+    "## ... fitting the model automatically with scikit"
    ]
   },
   {
